// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset widget in text mode should render a simple definition list without title 1`] = `
<dl>
  <Widget
    schema={
      {
        "key": [
          "user",
          "firstname",
        ],
        "schema": {
          "type": "string",
        },
        "type": "text",
      }
    }
    widgets={{}}
  />
  <Widget
    schema={
      {
        "key": [
          "user",
          "lastname",
        ],
        "schema": {
          "type": "string",
        },
        "type": "text",
      }
    }
    widgets={{}}
  />
</dl>
`;

exports[`Fieldset widget in text mode should render a title described by a definition list 1`] = `
<div
  className="form-group"
>
  <dt
    className="tf-title-text-mode"
  >
    My fieldset
  </dt>
  <dd>
    <dl>
      <Widget
        schema={
          {
            "key": [
              "user",
              "firstname",
            ],
            "schema": {
              "type": "string",
            },
            "type": "text",
          }
        }
        widgets={{}}
      />
      <Widget
        schema={
          {
            "key": [
              "user",
              "lastname",
            ],
            "schema": {
              "type": "string",
            },
            "type": "text",
          }
        }
        widgets={{}}
      />
    </dl>
  </dd>
</div>
`;
